--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 wavetable/libraries/wavefiles/*
-build
-#*.wav
+build/
+*.wav
 local/
 LOCAL/
 \.DS_Store
@@ -8,3 +8,7 @@ tmp/
 *.o
 calc_lfoinc_table/calc-increments
 wavetable/formant_library_calc/make-waveform-library
+calc/wavecalc
+calc/LFO_LFO.h
+calc/plot.py
+export_python
